fixed spacing on the portifolio

--- a/src/components/portifolio/styles.css
+++ b/src/components/portifolio/styles.css
@@ -11,7 +11,9 @@
 }
 
 .portifolio .parte1 {
-    width: 100%;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     min-height: 100vh;
     height: auto;
     flex-wrap: wrap;
@@ -23,12 +25,19 @@
     margin-bottom: 50px;
 }
 
+.portifolio .first_panel {
+    justify-content: space-between;
+}
+
+.portifolio .parte1 .parte1_title {
+    width: 100%;
+    text-align: left;
+}
+
 .portifolio .parte1 .box {
     position: relative;
-    width: 450px;
+    width: 96%;
     height: 400px;
-    margin-left: 15px;
-    margin-right: 15px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
     border-radius: 4px;
     transition: ease-in-out 0.3s;
@@ -121,7 +130,6 @@
 
 .portifolio .subsection_description {
     text-align: left;
-    text-transform: capitalize;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-size: 20px;
